// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RegistryService methods getFilteredProductionVaults should return mapped vaults 1`] = `
Array [
  Object {
    "address": "0x96d4dBdc91Bef716eb407e415c9987a9fAfb8906",
    "metadata": Object {
      "behavior": "None",
      "name": "bveOXD",
      "protocol": "0xDAO",
    },
    "state": "open",
    "version": "v1.5",
  },
  Object {
    "address": "0xa8bD8655A0dCABE76913D821Ab437562276b3B59",
    "metadata": Object {
      "behavior": "Ecosystem Helper",
      "name": "boxSOLID",
      "protocol": "0xDAO",
    },
    "state": "open",
    "version": "v1.5",
  },
  Object {
    "address": "0xbF2F3a9ba42A00CA5B18842D8eB1954120e4a2A9",
    "metadata": Object {
      "behavior": "Ecosystem Helper",
      "name": "bveOXD/OXD",
      "protocol": "0xDAO",
    },
    "state": "open",
    "version": "v1.5",
  },
  Object {
    "address": "0xcd1e62b390373fcFeA87Dd06E2497Fdc907935fA",
    "metadata": Object {
      "behavior": "Ecosystem",
      "name": "USDC/DEI",
      "protocol": "0xDAO",
    },
    "state": "open",
    "version": "v1.5",
  },
]
`;

exports[`RegistryService methods getProductionVaults should return mapped vaults and parsed metadata 1`] = `
Array [
  Object {
    "address": "0xFce6e3115D84c94df98BD286C1C67279dc021361",
    "metadata": Object {
      "behavior": "Ecosystem",
      "name": "👻 BOO/xBOO",
      "protocol": "Solidex",
    },
    "state": "discontinued",
    "version": "v1",
  },
  Object {
    "address": "0x7cc6049a125388B51c530e51727A87aE101f6417",
    "metadata": Object {
      "behavior": "Ecosystem Helper",
      "name": "WFTM/SEX",
      "protocol": "Solidex",
    },
    "state": "discontinued",
    "version": "v1",
  },
  Object {
    "address": "0xC7cBF5a24caBA375C09cc824481F5508c644dF28",
    "metadata": Object {
      "behavior": "Ecosystem Helper",
      "name": "SOLID/SOLIDsex",
      "protocol": "Solidex",
    },
    "state": "discontinued",
    "version": "v1",
  },
  Object {
    "address": "0x02330E37fcc7C27eB4632b3E31b951fDE5126c48",
    "metadata": Object {
      "behavior": "Bitcoin Rewards",
      "name": "GEIST/g3CRV",
      "protocol": "Solidex",
    },
    "state": "discontinued",
    "version": "v1",
  },
  Object {
    "address": "0x60c5A975Bd0511e45D4C9Ae5592c8CA412BE2310",
    "metadata": Object {
      "behavior": "Ecosystem",
      "name": "👻 WFTM/CRV",
      "protocol": "Solidex",
    },
    "state": "discontinued",
    "version": "v1",
  },
  Object {
    "address": "0x561f4dBaFA71ad05694C7ea1b894b9D99f684281",
    "metadata": Object {
      "behavior": "Ecosystem",
      "name": "👻 USDC/MIM",
      "protocol": "Solidex",
    },
    "state": "discontinued",
    "version": "v1",
  },
  Object {
    "address": "0x77e803F7d0B6d85731F68CfE1f1CA4c48de105F4",
    "metadata": Object {
      "behavior": "Ecosystem",
      "name": "👻 WFTM/SCREAM",
      "protocol": "Solidex",
    },
    "state": "discontinued",
    "version": "v1",
  },
  Object {
    "address": "0x609A51e13fd0896c0c02f0B642756533b29f36Ab",
    "metadata": Object {
      "behavior": "Ecosystem",
      "name": "👻 WFTM/renBTC",
      "protocol": "Solidex",
    },
    "state": "discontinued",
    "version": "v1",
  },
  Object {
    "address": "0x3f96f8cA67AcDE9041AD62125C5a4D062b07872c",
    "metadata": Object {
      "behavior": "Ecosystem",
      "name": "👻 WFTM/TOMB",
      "protocol": "Solidex",
    },
    "state": "discontinued",
    "version": "v1",
  },
  Object {
    "address": "0xB6D63A4e5Ca740e96C26AdAbcAc73BE78Ee39Dc5",
    "metadata": Object {
      "behavior": "Compounder",
      "name": "WBTC/renBTC",
      "protocol": "Solidex",
    },
    "state": "open",
    "version": "v1",
  },
  Object {
    "address": "0xd9770deC6fdA576450e66f0c441B6b8755F7184A",
    "metadata": Object {
      "behavior": "Compounder",
      "name": "WEVE/USDC",
      "protocol": "Solidex",
    },
    "state": "open",
    "version": "v1",
  },
  Object {
    "address": "0x4145a9B8B7bdC76F14e65c26f9c71e23B9069b25",
    "metadata": Object {
      "behavior": "Bitcoin Rewards",
      "name": "WFTM/CRV",
      "protocol": "Solidex",
    },
    "state": "open",
    "version": "v1",
  },
  Object {
    "address": "0x1AaF7f8154704D80E2380B3DbC967FD0486016e0",
    "metadata": Object {
      "behavior": "Bitcoin Rewards",
      "name": "USDC/MIM",
      "protocol": "Solidex",
    },
    "state": "open",
    "version": "v1",
  },
  Object {
    "address": "0x9a28eeFB2c5F8311f37c39314D78Be85C54B5da6",
    "metadata": Object {
      "behavior": "Bitcoin Rewards",
      "name": "WFTM/renBTC",
      "protocol": "Solidex",
    },
    "state": "open",
    "version": "v1",
  },
  Object {
    "address": "0x96d4dBdc91Bef716eb407e415c9987a9fAfb8906",
    "metadata": Object {
      "behavior": "None",
      "name": "bveOXD",
      "protocol": "0xDAO",
    },
    "state": "open",
    "version": "v1.5",
  },
  Object {
    "address": "0xa8bD8655A0dCABE76913D821Ab437562276b3B59",
    "metadata": Object {
      "behavior": "Ecosystem Helper",
      "name": "boxSOLID",
      "protocol": "0xDAO",
    },
    "state": "open",
    "version": "v1.5",
  },
  Object {
    "address": "0xbF2F3a9ba42A00CA5B18842D8eB1954120e4a2A9",
    "metadata": Object {
      "behavior": "Ecosystem Helper",
      "name": "bveOXD/OXD",
      "protocol": "0xDAO",
    },
    "state": "open",
    "version": "v1.5",
  },
  Object {
    "address": "0xcd1e62b390373fcFeA87Dd06E2497Fdc907935fA",
    "metadata": Object {
      "behavior": "Ecosystem",
      "name": "USDC/DEI",
      "protocol": "0xDAO",
    },
    "state": "open",
    "version": "v1.5",
  },
]
`;

exports[`RegistryService methods getVaults should return mapped vaults 1`] = `
Array [
  Object {
    "address": "0x96d4dBdc91Bef716eb407e415c9987a9fAfb8906",
    "metadata": Object {
      "behavior": "None",
      "name": "bveOXD",
      "protocol": "0xDAO",
    },
    "state": "open",
    "version": "v1.5",
  },
  Object {
    "address": "0xa8bD8655A0dCABE76913D821Ab437562276b3B59",
    "metadata": Object {
      "behavior": "Ecosystem Helper",
      "name": "boxSOLID",
      "protocol": "0xDAO",
    },
    "state": "open",
    "version": "v1.5",
  },
  Object {
    "address": "0xbF2F3a9ba42A00CA5B18842D8eB1954120e4a2A9",
    "metadata": Object {
      "behavior": "Ecosystem Helper",
      "name": "bveOXD/OXD",
      "protocol": "0xDAO",
    },
    "state": "open",
    "version": "v1.5",
  },
  Object {
    "address": "0xcd1e62b390373fcFeA87Dd06E2497Fdc907935fA",
    "metadata": Object {
      "behavior": "Ecosystem",
      "name": "USDC/DEI",
      "protocol": "0xDAO",
    },
    "state": "open",
    "version": "v1.5",
  },
]
`;
